--- a/sass/components/_portfolioButt.scss
+++ b/sass/components/_portfolioButt.scss
@@ -1,38 +1,38 @@
-.portfolioButtons ul {
-    display: flex;
-    flex-basis: auto;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 30px 8px;
-    margin-top: 94px;
-  }
-  
-  .portfolioButtons ul li {
-    list-style-type: none;
-  
-   
-    flex-basis: auto;
-  }
-  
-  .portfolioButtons ul li button {
-    cursor: pointer;
-    border: none;
-    border-radius: 4px;
-    font-weight: 500px;
-    font-size: 16px;
-    line-height: 1.61;
-    font-family: "Roboto";
-    letter-spacing: 0.03em;
-    padding-block: 6px;
-    padding-inline: 22px;
-  }
-  
-  .portfolioButtons ul li button:hover {
-    background-color: var(--main-color);
-    color: var(--button_text-color);
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-    transition: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
+.portfolio-buttons {
+  display: flex;
+  flex-basis: auto;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 30px 8px;
+  margin-top: 94px;
+}
+
+.portfolio-buttons__item {
+  list-style-type: none;
+
+  // flex-basis: calc(100% * 40px) / 5;
+  flex-basis: auto;
+}
+
+.portfolio-buttons__item button {
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  font-weight: 500px;
+  font-size: 16px;
+  line-height: 1.61;
+  font-family: "Roboto";
+  letter-spacing: 0.03em;
+  padding-block: 6px;
+  padding-inline: 22px;
+}
+
+.portfolio-buttons__item button:hover {
+  background-color: var(--main-color);
+  color: var(--button_text-color);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
